# nicholasaqm_R2

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/aqm_SD_controller/: CMakeLists.txt  aqm_SD_controller.c  aqm_SD_hw_reset.c
components/aqm_SD_controller/include/: aqm_SD_controller.h  aqm_SD_hw_reset.h
components/aqm_eth_controller/: CMakeLists.txt  aqm_eth_controller.c
components/aqm_global_data/: CMakeLists.txt  aqm_global_data.c
components/aqm_i2c_temp/: CMakeLists.txt  aqm_i2c_temp.c  component.mk  hdc2021.c  hdc3022.c  humid_ctrl.c
components/aqm_i2c_toxic/: CMakeLists.txt  ads1115.c  aqm_i2c_toxic.c
components/aqm_interval_controller/: CMakeLists.txt  aqm_interval.c
components/aqm_lte_controller/: CMakeLists.txt  aqm_lte_controller.c  component.mk
components/aqm_nvs_rw/: CMakeLists.txt  aqm_nvs_high.c  aqm_nvs_rw.c
components/aqm_spi_controller/: CMakeLists.txt  aqm_spi_controller.c
components/aqm_sps_controller/: CMakeLists.txt  aqm_sps_ctrl.c  sensirion_i2c_idf.c
components/aqm_wifi_interface/: CMakeLists.txt  aqm_wifi_interface.c  connect.c
components/cjson/: CMakeLists.txt  cJSON.c
components/i2c_common/: CMakeLists.txt  i2c_common.c
components/test_module/: CMakeLists.txt  test_module.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c
site/: index.html  login.html  style.css
site/config/: interval_config.html  lorawan_config.html  lte_config.html  mqtt_config.html
site/intern/: data_not_saved.html  data_saved.html  finished_config.html  login_fail.html  login_success.html
(+23 files in other folders)
